# Notepad

./: .gitignore  CMakeLists.txt  README.md  file_operations.c  file_operations.h  main.c  notepad.c  notepad.h  output_exception.c  output_exception.h  ui.c  ui.h
